--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="/components/img/favicon-logo.png" />
     <style>
       body {
         font-family: "Inter", sans-serif;
